# bevy-kajiya-playground

./: .gitignore  .gitmodules  Cargo.toml  README.md  bake.cmd
assets/meshes/mirror/: scene.gltf
assets/meshes/ring/: scene.gltf
assets/meshes/smiley_box/: scene.gltf
assets/scenes/: car.ron  gas_stations.ron
src/: main.rs
