[package]
name = "bevy-kayjiya-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-kajiya = { path = "bevy-kajiya" }
bevy = { path = "bevy", default-features = false, features = ["bevy_winit"] }
dolly = "0.1"

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
